macchanger (1.5.0-4) UNRELEASED; urgency=low

  * Maintainance upload
  * debian/manpages added
  * debian/examples added
  * debian/info added

 -- David Paleino <d.paleino@gmail.com>  Sun, 20 Sep 2009 23:30:59 +0200

macchanger (1.5.0-3) unstable; urgency=low

  * debian/patches/:
    - 01-fix_manpage.patch updated, added -s|--show option.
      Thanks to Geoff Simmons (Closes: #506922)
  * debian/control:
    - DM-Upload-Allowed set.
  * debian/watch added

 -- David Paleino <d.paleino@gmail.com>  Wed, 31 Dec 2008 11:30:48 +0100

macchanger (1.5.0-2) unstable; urgency=low

  * Package adopted (Closes: #481102)
  * debian/control:
    - Maintainer set to myself
    - Standards-Version bumped to 3.8.0:
      * added support for parallel builds to debian/rules
    - moved old Homepage pseudo-field to a proper field
    - added Vcs-Svn and Vcs-Browser fields
    - bumped debhelper B-D to >= 6
  * debian/compat bumped to 6
  * debian/copyright updated to machine-readable format
  * debian/rules updated
  * debian/patches/:
    - 01-fix_manpage.patch added, fixes hyphen-used-as-minus-sign lintian
      warning
    - 02-fix_usage_message.patch added, fixes usage message (Closes: #391400)

 -- David Paleino <d.paleino@gmail.com>  Fri, 06 Jun 2008 17:08:41 +0200

macchanger (1.5.0-1) unstable; urgency=low

  * New upstream version:
    - does not randomly generate broadcast MAC addresses (closes: #247721).

 -- Domenico Andreoli <cavok@debian.org>  Wed, 12 May 2004 11:14:24 +0200

macchanger (1.4.0-1) unstable; urgency=low

  * New upstream version.

 -- Domenico Andreoli <cavok@debian.org>  Wed,  8 Oct 2003 12:01:59 +0200

macchanger (1.3.0-1) unstable; urgency=low

  * Initial release (closes: #206556).

 -- Domenico Andreoli <cavok@debian.org>  Sun, 24 Aug 2003 17:19:04 +0200