@@ -3,75 +3,26 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+LDFLAGS="-Wl,-z,defs,--as-needed"
 
-include /usr/share/quilt/quilt.make
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS := -j$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-endif
-MAKEFLAGS += $(NUMJOBS)
-
-config.status: configure-stamp
-configure-stamp: configure
-	dh_testdir
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
-	--prefix=/usr --mandir=\$${prefix}/share/man \
-	--infodir=\$${prefix}/share/info \
-	CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs,--as-needed"
+build: build-stamp
+build-stamp:
+	dh --with quilt build
 	touch $@
 
-build: $(QUILT_STAMPFN) build-stamp
-build-stamp: config.status
-	dh_testdir
-	$(MAKE) $(MAKEFLAGS)
+install: install-stamp
+install-stamp:
+	dh install
 	touch $@
 
-clean: unpatch
-	dh_testdir
-	dh_testroot
-	[ ! -f Makefile ] || $(MAKE) distclean
-	dh_clean build-stamp configure-stamp
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/macchanger
+clean:
+	dh --with quilt $@
 
 binary-indep:
 
 binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-	dh_installman macchanger.1
-	dh_installexamples tools/IEEE_OUI.py
-	dh_installinfo doc/macchanger.info
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh $@
 
-binary: binary-indep binary-arch
+binary: binary-arch binary-indep
+
 .PHONY: build clean binary-indep binary-arch binary install 
